--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.uri=mongodb+srv://CarlinGebyte:L0LCaCiGa@cluster0.0ksyp.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://CarlinGebyte:0Au7C4c1v6@cluster0.0ksyp.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=reto4-spring
 spring.data.mongodb.auto-index-creation=true
